--- a/android-developer.html
+++ b/android-developer.html
@@ -119,7 +119,7 @@ Android Developer at Dyson in Wiltshire | Android jobs | 42jobs.io
 <p><span class="badge badge-light">New York, NYNew York, NY</span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/tracktik/jobs/4012246002'>Job Application for Android Developer at TrackTik</a></h5> 
+<h5><a href='https://boards.greenhouse.io/tracktik/jobs/4012246002'>Job Application for Android Developer at TrackTik</a></h5> 
 <p><span class="badge badge-light">Montreal, QC</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -146,7 +146,7 @@ Android Developer at Dyson in Wiltshire | Android jobs | 42jobs.io
 <p>1 day ago ... HomeAdvisor is seeking an Android Developer for our team of smart, dedicated 
 mobile developers. We're looking for a developer who has solid, demonstrable?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/careermovement/job/at5qqmbxhzh531onf1xtqt8gba'>Senior Android Developer/Android Architect | Career Movement</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/careermovement/job/at5qqmbxhzh531onf1xtqt8gba'>Senior Android Developer/Android Architect | Career Movement</a></h5> 
 <p><span class="badge badge-light">Los Angeles, CAUnited States</span></p>
 <p>Posted on: 2019-10-25</p>
 <hr/>
@@ -164,11 +164,11 @@ mobile developers. We're looking for a developer who has solid, demonstrable?...
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<h5><a href='https://www.priorityrecruitment.co.uk/job/senior-android-developer/'>"Senior Android Developer" with ref. RT-19  I.T.  jobs in Surrey - Priority Recruitment</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.priorityrecruitment.co.uk/job/senior-android-developer/'>"Senior Android Developer" with ref. RT-19  I.T.  jobs in Surrey - Priority Recruitment</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.cv-library.co.uk/job/211079658/Android-Developer?s=101089'>Android Developer | CV-Library.co.uk | 211079658</a></h5> 
+<h5><a href='https://www.cv-library.co.uk/job/211079658/Android-Developer?s=101089'>Android Developer | CV-Library.co.uk | 211079658</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-24</p>
 <hr/>
@@ -258,7 +258,7 @@ development and maintenance of applications aimed at the public as well as?...</
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-20</p>
 <hr/>
-<h5><a href='https://www.freshersworld.com/jobs/android-application-developer-jobs-in-surat-softstorm-technosys-pvt-ltd-727665?src=mktld'>Android application developer Jobs in Surat - SoftStorm Technosys Pvt. Ltd. 16 Oct 2019</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.freshersworld.com/jobs/android-application-developer-jobs-in-surat-softstorm-technosys-pvt-ltd-727665?src=mktld'>Android application developer Jobs in Surat - SoftStorm Technosys Pvt. Ltd. 16 Oct 2019</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-20</p>
 <hr/>
@@ -300,7 +300,7 @@ development and maintenance of applications aimed at the public as well as?...</
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-18</p>
 <hr/>
-<h5><a href='https://apply.workable.com/qivos/j/4146C92C6C/'>Android Developer - QIVOS</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://apply.workable.com/qivos/j/4146C92C6C/'>Android Developer - QIVOS</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... As an Android Developer you will be part of our Platform Development team, 
 where you will design and build the next generation of our mobile applications.</p>
@@ -310,7 +310,7 @@ where you will design and build the next generation of our mobile applications.<
 <p>1 day ago ... In joining Monese's award winning team as Android Developer you will be 
 participating in driving our already successful banking service to new heights.</p>
 <hr/>
-<h5><a href='https://jobs.crelate.com/portal/strategicemployment/job/t4bua4n7mdkgcoi68obooz4pba'>Android Developer  | Strategic Employment</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/strategicemployment/job/t4bua4n7mdkgcoi68obooz4pba'>Android Developer  | Strategic Employment</a></h5> 
 <p><span class="badge badge-light">Irvine, CA  Irvine</span></p>
 <p>Posted on: 2019-10-17</p>
 <hr/>
@@ -424,7 +424,7 @@ Senior Android Developer at BUX in Amsterdam | Android jobs | 42jobs.io
 <p><span class="badge badge-light">London, United Kingdom</span></p>
 <p>Posted on: 2019-10-12</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://techfirefly.workable.com/j/169E74AF68'>Tech Firefly - Jobs: Android Developer (Locals Only) - Apply online</a></h5> 
+<h5><a href='https://techfirefly.workable.com/j/169E74AF68'>Tech Firefly - Jobs: Android Developer (Locals Only) - Apply online</a></h5> 
 <p><span class="badge badge-light">United States  Plano, TX</span></p>
 <p>Posted on: 2019-10-12</p>
 <hr/>
@@ -467,7 +467,7 @@ Apply for this job. Cornershop es un servicio que te lleva el s?per y distintas?
 <p><span class="badge badge-light">Chicago, Illinois</span></p>
 <p>Posted on: 2019-10-09</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/leiainc/jobs/1903630'>Job Application for Junior Android Developer - Media at LEIA Inc.</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/leiainc/jobs/1903630'>Job Application for Junior Android Developer - Media at LEIA Inc.</a></h5> 
 <p><span class="badge badge-light">Menlo Park, CA</span></p>
 <p>Posted on: 2019-10-09</p>
 <hr/>
@@ -487,7 +487,7 @@ Apply for this job. Cornershop es un servicio que te lleva el s?per y distintas?
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-09</p>
 <hr/>
-<h5><a href='https://karmarama.workable.com/j/7D5726D33D'>Karmarama - Jobs: Senior Android Developer - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://karmarama.workable.com/j/7D5726D33D'>Karmarama - Jobs: Senior Android Developer - Apply online</a></h5> 
 <p><span class="badge badge-light">London, England, United Kingdom</span></p>
 <p>Posted on: 2019-10-09</p>
 <hr/>
