--- a/software.html
+++ b/software.html
@@ -39,6 +39,14 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qC9aVfwA&k=Job&j=o6fY9fwc&__jvst=Employee&__jvsd=sNJTqgwA&__jvsc=Twitter&bid=ns6fpMwt'>Freedom Financial Network Careers - Senior Software Engineer</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-10-30</p>
+<hr/>
+<h5><a href='http://coldboretechnology.applytojob.com/apply/es4GIgKYRH/Senior-Software-Developer'>Senior Software Developer - Cold Bore Technology - Career Page</a></h5> 
+<p><span class="badge badge-light">Canada</span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
 <h5><a href='https://jobs.crelate.com/portal/cardinalhire/job/6zf75krt7xgwxfutqniyn16j3r'>Senior Full Stack Software Engineer | CardinalHire</a></h5> 
 <p><span class="badge badge-light">Mountain View, CA</span></p>
 <p>Posted on: 2019-10-30</p>
@@ -95,7 +103,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.okta.com/company/careers/engineering/staff-software-engineer---dev-ex-1902356/?gh_src=82a8057f1'>Staff Software Engineer - Dev Ex | Okta</a></h5> 
+<h5><a href='https://www.okta.com/company/careers/engineering/staff-software-engineer---dev-ex-1902356/?gh_src=82a8057f1'>Staff Software Engineer - Dev Ex | Okta</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -107,7 +115,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.okta.com/company/careers/engineering/software-engineer-identity-experience-1886374/?gh_src=82a8057f1'>Software Engineer, Identity Experience | Okta</a></h5> 
+<h5><a href='https://www.okta.com/company/careers/engineering/software-engineer-identity-experience-1886374/?gh_src=82a8057f1'>Software Engineer, Identity Experience | Okta</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -143,11 +151,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://www.okta.com/company/careers/engineering/software-engineer-security-senior--staff--principal-1650474/?gh_src=82a8057f1'>Software Engineer, Security (Senior/ Staff/ Principal) | Okta</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.okta.com/company/careers/engineering/software-engineer-security-senior--staff--principal-1650474/?gh_src=82a8057f1'>Software Engineer, Security (Senior/ Staff/ Principal) | Okta</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.okta.com/company/careers/engineering/software-engineer-technical-services-senior---staff-1875199/?gh_src=82a8057f1'>Software Engineer, Technical Services (Senior / Staff) | Okta</a></h5> 
+<h5><a href='https://www.okta.com/company/careers/engineering/software-engineer-technical-services-senior---staff-1875199/?gh_src=82a8057f1'>Software Engineer, Technical Services (Senior / Staff) | Okta</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -155,7 +163,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.okta.com/company/careers/engineering/software-engineer-security-senior---staff---principal-1557543/?gh_src=82a8057f1'>Software Engineer, Security (Senior / Staff / Principal) | Okta</a></h5> 
+<h5><a href='https://www.okta.com/company/careers/engineering/software-engineer-security-senior---staff---principal-1557543/?gh_src=82a8057f1'>Software Engineer, Security (Senior / Staff / Principal) | Okta</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -203,7 +211,7 @@
 <p><span class="badge badge-light">Columbia, Maryland</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qB09Vfwp&k=Job&j=okihbfwO&__jvst=Employee+Referral&__jvsd=sB4xJgwG&__jvsc=Twitter&bid=nuy7oMwO'>NICE Careers - Software Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qB09Vfwp&k=Job&j=okihbfwO&__jvst=Employee+Referral&__jvsd=sB4xJgwG&__jvsc=Twitter&bid=nuy7oMwO'>NICE Careers - Software Engineer</a></h5> 
 <p><span class="badge badge-light">Pune, India</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -263,7 +271,7 @@
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qB09Vfwp&k=Job&j=oTg6afw9&__jvst=Employee+Referral&__jvsd=sPcqIhwV&__jvsc=Twitter&bid=nrb2oMwj'>NICE inContact Careers - Software Engineer II</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qB09Vfwp&k=Job&j=oTg6afw9&__jvst=Employee+Referral&__jvsd=sPcqIhwV&__jvsc=Twitter&bid=nrb2oMwj'>NICE inContact Careers - Software Engineer II</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -295,7 +303,7 @@
 <p><span class="badge badge-light">Sunnyvale, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qB09Vfwp&k=Job&j=oU7LafwG&__jvst=Employee+Referral&__jvsd=sIog3hwb&__jvsc=Twitter&bid=nPpWoMwP'>NICE inContact Careers - Sr. Software Engineer (Java)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qB09Vfwp&k=Job&j=oU7LafwG&__jvst=Employee+Referral&__jvsd=sIog3hwb&__jvsc=Twitter&bid=nPpWoMwP'>NICE inContact Careers - Sr. Software Engineer (Java)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -359,7 +367,7 @@
 <p><span class="badge badge-light">Cupertino California  North Carolina  Atlanta, Georgia</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/ringcentral/job/ofQrbfwr'>RingCentral Careers - Senior Software Engineer (Multiple Openings)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/ringcentral/job/ofQrbfwr'>RingCentral Careers - Senior Software Engineer (Multiple Openings)</a></h5> 
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -371,7 +379,7 @@
 <p><span class="badge badge-light">Paris, France  Paris  Paris</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q3W9VfwN&k=Job&j=ozBg8fwi&__jvst=Employee&__jvsd=sv16Ffw1&__jvsc=Twitter&bid=nmONoMwC'>Guidewire Software, Inc. Careers - Senior Software Engineer ? Dublin, Ireland</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q3W9VfwN&k=Job&j=ozBg8fwi&__jvst=Employee&__jvsd=sv16Ffw1&__jvsc=Twitter&bid=nmONoMwC'>Guidewire Software, Inc. Careers - Senior Software Engineer ? Dublin, Ireland</a></h5> 
 <p><span class="badge badge-light">Dublin Dublin Dublin Dublin</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -399,7 +407,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qB09Vfwp&k=Job&j=o6dhbfwv&__jvst=Employee+Referral&__jvsd=sB4xJgwG&__jvsc=Twitter&bid=ntrLoMwk'>NICE Careers - Expert Java Software Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qB09Vfwp&k=Job&j=o6dhbfwv&__jvst=Employee+Referral&__jvsd=sB4xJgwG&__jvsc=Twitter&bid=ntrLoMwk'>NICE Careers - Expert Java Software Engineer</a></h5> 
 <p><span class="badge badge-light">Raanana, Israel</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -431,15 +439,7 @@
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q3W9VfwN&k=Job&j=oxBg8fwg&__jvst=Employee&__jvsd=sv16Ffw1&__jvsc=Twitter&bid=n1gHoMwD'>Guidewire Software, Inc. Careers - Software Engineer Front-End ? Dublin, Ireland</a></h5> 
-<p><span class="badge badge-light">Dublin Dublin Dublin Dublin</span></p>
-<p>Posted on:: 2019-10-30</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/InterIKEAGroup/743999698481011-software-engineering-manager-ikea-home-smart'>Inter IKEA Group Software Engineering Manager - IKEA Home smart | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">?lmhult, Sweden</span></p>
-<p>Posted on: 2019-10-30</p>
-<hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
+
 
 <!--End body here -->
 
